// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render 1`] = `
<Styled(Segment)>
  <Icon
    as="i"
    name="star"
    onClick={[Function]}
    size="huge"
    style={
      Object {
        "color": "whitesmoke",
        "position": "absolute",
        "right": 0,
        "top": 9,
        "zIndex": 1,
      }
    }
  />
  <Styled(Image) />
  <styled.div>
    <Header>
      props.title
    </Header>
    <p>
      This is the description
    </p>
  </styled.div>
  <styled.div>
    <Divider />
    <p
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <Icon
        as="i"
        name="file text outline"
      />
      Read Time
    </p>
    <p
      style={
        Object {
          "display": "inline-block",
          "float": "right",
        }
      }
    >
      Published 06/16/18
    </p>
  </styled.div>
</Styled(Segment)>
`;

exports[`Card should render as star filled when passed starFilled as a prop 1`] = `
<Styled(Segment)>
  <Icon
    as="i"
    name="star"
    onClick={[Function]}
    size="huge"
    style={
      Object {
        "color": "yellow",
        "position": "absolute",
        "right": 0,
        "top": 9,
        "zIndex": 1,
      }
    }
  />
  <Styled(Image) />
  <styled.div>
    <Header>
      props.title
    </Header>
    <p>
      This is the description
    </p>
  </styled.div>
  <styled.div>
    <Divider />
    <p
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <Icon
        as="i"
        name="file text outline"
      />
      Read Time
    </p>
    <p
      style={
        Object {
          "display": "inline-block",
          "float": "right",
        }
      }
    >
      Published 06/16/18
    </p>
  </styled.div>
</Styled(Segment)>
`;
